Starting the project

--- a/1.RISE/utils/test_notebook.ipynb
+++ b/1.RISE/utils/test_notebook.ipynb
@@ -991,7 +991,32 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#RISE_algoirthm_Function with and input: ES is the training set.\n",
+    "def RISE_algoirthm_Function(dataset):\n",
+    "    #Create a set of rules based on each instance of the dataset\n",
+    "    rules = []\n",
+    "    #Extract the rules from the dataset\n",
+    "    for i in range(len(dataset)):\n",
+    "        rules.append(dataset[i])\n",
+    "    #Create a set of rules based on each attribute of the dataset\n",
+    "    rules_attribute = []\n",
+    "    #Extract the rules from the dataset\n",
+    "    for i in range(len(dataset.columns)):\n",
+    "        rules_attribute.append(dataset[dataset.columns[i]])\n",
+    "    #Create a set of rules based on each class of the dataset\n",
+    "    rules_class = []\n",
+    "    #Extract the rules from the dataset\n",
+    "    for i in range(len(dataset['class'].unique())):\n",
+    "        rules_class.append(dataset[dataset['class'] == dataset['class'].unique()[i]])\n",
+    "    #Create a set of rules based on each instance of the dataset\n",
+    "    rules_instance = []\n",
+    "    #Extract the rules from the dataset\n",
+    "    for i in range(len(dataset)):\n",
+    "        rules_instance.append(dataset[i])\n",
+    "    #Create a set of rules based on each attribute of the dataset\n",
+    "    \n"
+   ]
   },
   {
    "cell_type": "code",
