--- a/2_RandomForest_decisionForest/Random_forest.ipynb
+++ b/2_RandomForest_decisionForest/Random_forest.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,15 +22,12 @@
     "#Function to read csv data\n",
     "def read_csv(file_name):\n",
     "    data = pd.read_csv(file_name)\n",
-    "    return data \n",
-    "\n",
-    "\n",
-    "\n"
+    "    return data "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -356,10 +353,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "c6e4e9f98eb68ad3b7c296f83d20e6de614cb42e90992a65aa266555a3137d0d"
+   "hash": "546fb61a54d70d9e8870b47fbeb8cd1382ddbb06575ae01156b5e71c2ca4e737"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('base')",
+   "display_name": "Python 3.8.13 ('SEL')",
    "language": "python",
    "name": "python3"
   },
@@ -373,7 +370,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.13"
   },
   "orig_nbformat": 4
  },
