--- a/2_RandomForest_decisionForest/Random_forest.ipynb
+++ b/2_RandomForest_decisionForest/Random_forest.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -74,6 +74,139 @@
     "#take a look at the data\n",
     "print(df.describe())\n",
     "print(df.columns.names)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Decision Tree algorithm\n",
+    "\n",
+    "1. Compute all the possibles tresholds availables(values between each feature)\n",
+    "2. Compute the Gine index of the children node and the cost ffor the parent node.\n",
+    "3. Choose the trheshold generated with the less cost value.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a CART classifier\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Import dataset to use in the random forest\n",
+    "X = df.iloc[:,0:4].values\n",
+    "y = df.iloc[:,4].values\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                 precision    recall  f1-score   support\n",
+      "\n",
+      "    Iris-setosa       1.00      1.00      1.00        50\n",
+      "Iris-versicolor       1.00      1.00      1.00        50\n",
+      " Iris-virginica       1.00      1.00      1.00        50\n",
+      "\n",
+      "       accuracy                           1.00       150\n",
+      "      macro avg       1.00      1.00      1.00       150\n",
+      "   weighted avg       1.00      1.00      1.00       150\n",
+      "\n",
+      "[[50  0  0]\n",
+      " [ 0 50  0]\n",
+      " [ 0  0 50]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Create a random forest\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "rf = RandomForestClassifier(n_estimators=100, random_state=0)\n",
+    "rf.fit(X, y)\n",
+    "#Predict the response for new observations\n",
+    "y_pred = rf.predict(X)\n",
+    "\n",
+    "#Import the classification report from sklearn\n",
+    "from sklearn.metrics import classification_report\n",
+    "#Print the classification report\n",
+    "print(classification_report(y, y_pred))\n",
+    "#Observe the random forest results on the training set\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "print(confusion_matrix(y, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                 precision    recall  f1-score   support\n",
+      "\n",
+      "    Iris-setosa       1.00      1.00      1.00        50\n",
+      "Iris-versicolor       1.00      1.00      1.00        50\n",
+      " Iris-virginica       1.00      1.00      1.00        50\n",
+      "\n",
+      "       accuracy                           1.00       150\n",
+      "      macro avg       1.00      1.00      1.00       150\n",
+      "   weighted avg       1.00      1.00      1.00       150\n",
+      "\n",
+      "[[50  0  0]\n",
+      " [ 0 50  0]\n",
+      " [ 0  0 50]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#create a decision tree\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "dt = DecisionTreeClassifier(criterion='entropy', random_state=0)\n",
+    "dt.fit(X, y)\n",
+    "y_pred = dt.predict(X)\n",
+    "print(classification_report(y, y_pred))\n",
+    "print(confusion_matrix(y, y_pred))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   sepal_length  sepal_width  petal_length  petal_width      species\n",
+      "0           5.1          3.5           1.4          0.2  Iris-setosa\n",
+      "1           4.9          3.0           1.4          0.2  Iris-setosa\n",
+      "2           4.7          3.2           1.3          0.2  Iris-setosa\n",
+      "3           4.6          3.1           1.5          0.2  Iris-setosa\n",
+      "4           5.0          3.6           1.4          0.2  Iris-setosa\n"
+     ]
+    }
+   ],
+   "source": [
+    "# read cvs file\n",
+    "path = './data/iris.csv'\n",
+    "df = pd.read_csv(path)\n",
+    "print(df.head())"
    ]
   },
   {
@@ -352,11 +485,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "546fb61a54d70d9e8870b47fbeb8cd1382ddbb06575ae01156b5e71c2ca4e737"
-  },
   "kernelspec": {
-   "display_name": "Python 3.8.13 ('SEL')",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -370,9 +500,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.12"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "c6e4e9f98eb68ad3b7c296f83d20e6de614cb42e90992a65aa266555a3137d0d"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
